--- a/app/views/models/show.html.erb
+++ b/app/views/models/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-	<div class="row">
+	<div class="profile row">
 		<div class="col-md-offset-3 col-md-3">
 			<div class="img-box">
 				<div class="img"><%= attachment_image_tag(@model, :hairmodel_image, fallback: 'no images.png', size: '200x200', class: "img") %></div>
