--- a/app/views/hairdressers/_follows.html.erb
+++ b/app/views/hairdressers/_follows.html.erb
@@ -1,7 +1,7 @@
 <% @hairdresser.hairdresser_follows.each do |follow| %>
   <%= link_to model_path(follow.model.id) do %>
-    <div class="col-md-6">
-      <div class="model-index-box clearfix">
+    <div class="model-index col-md-6">
+      <div class="model-index-box">
         <span><%= attachment_image_tag(follow.model, :hairmodel_image, fallback: 'no images.png', size: '150x150', class: "image-box") %></span>
         <div class="profile-box">
           <table class="profile-list">
