--- a/app/views/hairdressers/index.html.erb
+++ b/app/views/hairdressers/index.html.erb
@@ -45,8 +45,8 @@
   <div class="row">
     <% @hairdressers.each do |hairdresser| %>
       <%= link_to hairdresser_path(hairdresser.id) do %>
-    <div class="col-md-6">
-      <div class="index-box clearfix">
+    <div class="index col-md-6">
+      <div class="index-box">
         <span><%= attachment_image_tag(hairdresser, :hairdresser_image, fallback: 'no images.png', size: '150x150', class: "image-box") %></span>
         <div class="profile-box">
         <table class="profile-list">
@@ -59,7 +59,7 @@
             <td><%= hairdresser.hairdresser_gender_i18n %></td>
           </tr>
           <tr>
-            <td class="profile-item">サロン</td>
+            <td class="profile-item">美容室</td>
             <td><%= hairdresser.salon_name %></td>
           </tr>
           <tr>
