--- a/app/views/hairdressers/show.html.erb
+++ b/app/views/hairdressers/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-	<div class="row">
+	<div class="profile row">
 		<div class="col-md-offset-1 col-md-2">
 			<div class="img-box">
 					<div class="img"><%= attachment_image_tag(@hairdresser, :hairdresser_image, fallback: 'no images.png', size: '200x200', class: "img") %></div>
