--- a/app/views/models/_followers.html.erb
+++ b/app/views/models/_followers.html.erb
@@ -1,7 +1,7 @@
 <% @model.hairdresser_follows.each do |follower| %>
   <%= link_to hairdresser_path(follower.hairdresser.id) do %>
-    <div class="col-md-6">
-      <div class="index-box clearfix">
+    <div class="index col-md-6">
+      <div class="index-box">
         <span><%= attachment_image_tag(follower.hairdresser, :hairdresser_image, fallback: 'no images.png', size: '150x150', class: "image-box") %></span>
         <div class="profile-box">
           <table class="profile-list">
