--- a/app/views/models/index.html.erb
+++ b/app/views/models/index.html.erb
@@ -30,8 +30,8 @@
   <div class="row">
     <% @models.each do |model| %>
       <%= link_to model_path(model.id) do %>
-        <div class="col-md-6">
-          <div class="model-index-box clearfix">
+        <div class="model-index col-md-6">
+          <div class="model-index-box">
             <span><%= attachment_image_tag(model, :hairmodel_image, fallback: 'no images.png', size: '150x150', class: "image-box") %></span>
             <div class="profile-box">
               <table class="profile-list">
