--- a/app/views/models/registrations/new.html.erb
+++ b/app/views/models/registrations/new.html.erb
@@ -24,32 +24,32 @@
 
             <div class="sign-up-field">
               <%= f.label :性別 %><br />
-              <%= f.select :hairmodel_gender, Model.hairmodel_genders.keys.map {|k| [I18n.t("enums.model.hairmodel_gender.#{k}"), k]}, autofocus: true, autocomplete: "hairmodel_gender", class: "sign-up-select" %>
+              <%= f.select :hairmodel_gender, Model.hairmodel_genders.keys.map {|k| [I18n.t("enums.model.hairmodel_gender.#{k}"), k]}, include_blank: '', autofocus: true, autocomplete: "hairmodel_gender", class: "sign-up-select" %>
             </div>
 
             <div class="sign-up-field">
               <%= f.label :年代 %><br />
-              <%= f.select :age, Model.ages.keys.map {|k| [I18n.t("enums.model.age.#{k}"), k]}, autofocus: true, autocomplete: "age", class: "sign-up-select" %>
+              <%= f.select :age, Model.ages.keys.map {|k| [I18n.t("enums.model.age.#{k}"), k]}, include_blank: '', autofocus: true, autocomplete: "age", class: "sign-up-select" %>
             </div>
 
             <div class="sign-up-field">
               <%= f.label :髪の長さ %><br />
-              <%= f.select :hair_length, Model.hair_lengths.keys.map {|k| [I18n.t("enums.model.hair_length.#{k}"), k]}, autofocus: true, autocomplete: "hair_length", class: "sign-up-select" %>
+              <%= f.select :hair_length, Model.hair_lengths.keys.map {|k| [I18n.t("enums.model.hair_length.#{k}"), k]}, include_blank: '', autofocus: true, autocomplete: "hair_length", class: "sign-up-select" %>
             </div>
 
             <div class="sign-up-field">
               <%= f.label :黒染め履歴 %><br />
-              <%= f.select :black_history, Model.black_histories.keys.map {|k| [I18n.t("enums.model.black_history.#{k}"), k]}, autofocus: true, autocomplete: "black_history", class: "sign-up-select" %>
+              <%= f.select :black_history, Model.black_histories.keys.map {|k| [I18n.t("enums.model.black_history.#{k}"), k]}, include_blank: '', autofocus: true, autocomplete: "black_history", class: "sign-up-select" %>
             </div>
 
             <div class="sign-up-field">
               <%= f.label :ブリーチ履歴 %><br />
-              <%= f.select :bleach_history, Model.bleach_histories.keys.map {|k| [I18n.t("enums.model.bleach_history.#{k}"), k]}, autofocus: true, autocomplete: "bleach_history", class: "sign-up-select" %>
+              <%= f.select :bleach_history, Model.bleach_histories.keys.map {|k| [I18n.t("enums.model.bleach_history.#{k}"), k]}, include_blank: '', autofocus: true, autocomplete: "bleach_history", class: "sign-up-select" %>
             </div>
 
             <div class="sign-up-field">
               <%= f.label :縮毛矯正 %><br />
-              <%= f.select :straight_history, Model.straight_histories.keys.map {|k| [I18n.t("enums.model.straight_history.#{k}"), k]}, autofocus: true, autocomplete: "straight_history", class: "sign-up-select" %>
+              <%= f.select :straight_history, Model.straight_histories.keys.map {|k| [I18n.t("enums.model.straight_history.#{k}"), k]}, include_blank: '', autofocus: true, autocomplete: "straight_history", class: "sign-up-select" %>
             </div>
 
             <div class="sign-up-field">
