--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="back col-md-offset-2 col-md-8">
+		<div class="back col-md-offset-2">
 			<%= link_to :back do %>
 				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"><strong>Back</strong></span>
 			<% end %>
