--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,11 +37,11 @@ a:hover {
 }
 
 a:link {
-	color: #000000;
+	color: #220000;
 }
 
 a:visited {
-	color: #000000;
+	color: #220000;
 }
 
 ul {
@@ -92,6 +92,48 @@ header {
 				color: #C2AA99;
 			}
 		}
+
+		.s-menu {
+		  position: fixed;
+		  top: 50px;
+		  right: 85px;
+		  background: rgba(227, 208, 195, 1);
+		  border-radius: 5px;
+		  width: 100px;
+		  text-align: center;
+		  a {
+		  	color: #FFFFFF;
+		  	font-weight: bold;
+		  	margin: 10px;
+		  	display: block;
+		  }
+		  a:hover {
+		  	color: #220000;
+		  }
+		}
+
+		.l-menu {
+		  position: fixed;
+		  top: 50px;
+		  right: 0px;
+		  background: rgba(227, 208, 195, 1);
+		  border-radius: 5px;
+		  width: 100px;
+		  text-align: center;
+		  a {
+		  	color: #FFFFFF;
+		  	font-weight: bold;
+		  	margin: 10px;
+		  	display: block;
+		  }
+		  a:hover {
+		  	color: #220000;
+		  }
+		}
+
+
+
+
 	}
 }
 
