--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://kit.fontawesome.com/14f67da88f.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -21,22 +22,60 @@
           <% end %>
           <ul>
             <% if hairdresser_signed_in? %>
-              <li class="img"><%= attachment_image_tag(current_hairdresser, :hairdresser_image, fallback: 'no images.png', size: '40x40', class: "img") %></li>
-              <li class="name"><%= current_hairdresser.hairdresser_name %></li>
-              <li class="nav-menu"><%= link_to "マイページ", hairdresser_path(current_hairdresser.id) %></li>
-              <li class="nav-menu"><%= link_to "ヘアモ一覧", models_path %></li>
-              <li class="nav-menu"><%= link_to "ログアウト", destroy_hairdresser_session_path, method: :delete %></li>
+              <%= link_to hairdresser_path(current_hairdresser.id) do %>
+                <li class="img"><%= attachment_image_tag(current_hairdresser, :hairdresser_image, fallback: 'no images.png', size: '40x40', class: "img") %></li>
+                <li class="name"><%= current_hairdresser.hairdresser_name %></li>
+              <% end %>
+              <% if unchecked_hairdresser_notifications.any? %>
+                <li class="nav-menu">
+                  <%= link_to notifications_path do %>
+                    <i class="fas fa-bell fa-lg" style="color: #FFB570;"></i><span>通知</span>
+                  <% end %>
+                </li>
+              <% else %>
+                <li class="nav-menu">
+                  <%= link_to notifications_path do %>
+                    <i class="fas fa-bell fa-lg"></i><span>通知</span>
+                  <% end %>
+                </li>
+              <% end %>
+              <li class="nav-menu">
+                <%= link_to destroy_hairdresser_session_path, method: :delete do %>
+                  <i class="fas fa-sign-out-alt fa-lg"></i><span>ログアウト</span>
+                <% end %>
+              </li>
             <% elsif model_signed_in? %>
-              <li class="img"><%= attachment_image_tag(current_model, :hairmodel_image, fallback: 'no images.png', size: '40x40', class: "img") %></li>
-              <li class="name"><%= current_model.hairmodel_name %></li>
-              <li class="nav-menu"><%= link_to "マイページ", model_path(current_model.id) %></li>
-              <li class="nav-menu"><%= link_to "美容師一覧", hairdressers_path %></li>
-              <li class="nav-menu"><%= link_to "ログアウト", destroy_model_session_path, method: :delete %></li>
+              <%= link_to model_path(current_model.id) do %>
+                <li class="img"><%= attachment_image_tag(current_model, :hairmodel_image, fallback: 'no images.png', size: '40x40', class: "img") %></li>
+                <li class="name"><%= current_model.hairmodel_name %></li>
+              <% end %>
+              <% if unchecked_model_notifications.any? %>
+                <li class="nav-menu">
+                  <%= link_to notifications_path do %>
+                    <i class="fas fa-bell fa-lg" style="color: #FFB570;"></i><span>通知</span>
+                  <% end %>
+                </li>
+              <% else %>
+                <li class="nav-menu">
+                  <%= link_to notifications_path do %>
+                    <i class="fas fa-bell fa-lg"></i><span>通知</span>
+                  <% end %>
+                </li>
+              <% end %>
+              <li class="nav-menu">
+                <%= link_to destroy_model_session_path, method: :delete do %>
+                  <i class="fas fa-sign-out-alt fa-lg"></i><span>ログアウト</span>
+                <% end %>
+              </li>
             <% else %>
-              <li class="nav-menu"><%= link_to "About", about_path %></li>
+              <li class="nav-menu">
+                <%= link_to about_path do %>
+                  <i class="fas fa-question-circle fa-lg"></i><span>About</span>
+                <% end %>
+              </li>
               <li class="nav-menu">
                   <a class="signin-trigger" href="#">
-                    <span>新規登録</span>
+                    <span><i class="fas fa-user-plus fa-lg"></i>新規登録</span>
                   </a>
               </li>
               <li class="s-menu">
@@ -45,7 +84,7 @@
               </li>
               <li class="nav-menu">
                   <a class="login-trigger" href="#">
-                    <span>ログイン</span>
+                    <span><i class="fas fa-sign-in-alt fa-lg"></i>ログイン</span>
                   </a>
               </li>
               <li class="l-menu">
