--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -351,6 +351,15 @@ footer p {
 			font-weight: bold;
 			padding: 5px;
 		}
+		.reset-btn {
+			background-color: rgba(128, 128, 128, 0.5);
+			color: #FFFFFF;
+			font-weight: bold;
+			padding: 6px;
+			border-style: none;
+			border-radius: 5px;
+			margin-right: 10px;
+		}
 	}
 }
 
@@ -654,6 +663,15 @@ footer p {
 			color: #FFFFFF;
 			font-weight: bold;
 			padding: 5px;
+		}
+		.reset-btn {
+			background-color: rgba(128, 128, 128, 0.5);
+			color: #FFFFFF;
+			font-weight: bold;
+			padding: 6px;
+			border-style: none;
+			border-radius: 5px;
+			margin-right: 10px;
 		}
 	}
 }
