--- a/app/views/models/index.html.erb
+++ b/app/views/models/index.html.erb
@@ -21,6 +21,7 @@
             <%= f.select :straight_history, options_for_select(Model.straight_histories.keys.map {|k| [I18n.t("enums.model.straight_history.#{k}"), k]},params[:straight_history]), { include_blank: '選択なし'}, class: "choice" %>
           </div>
           <div class="search-btn">
+            <%= f.submit "clear", type: :button, class: "reset-btn", id: "reset-btn" %>
             <%= f.submit "検索", class: "btn" %>
           </div>
         <% end %>
